--- a/index.html
+++ b/index.html
@@ -46,12 +46,28 @@
         </nav>
       </div>
     </header>
+    <!---------------------------- countDown ---------------------->
+
+    <div class="timer-wrapper">
+      <a href="#">
+        <span class="five">5%</span> personal discount within
+        <span class="timer"></span>
+      </a>
+    </div>
+
+    <!----------------------------end------------------------------>
     <main class="main">
       <section class="headline">
         <div class="container-headline">
           <h1 class="title">IPHONE 14 PRO</h1>
           <img class="headline-img" src="images/iphone_14_pro.png" alt="" />
           <a class="headline-btn" href="#">ВЫБРАТЬ</a>
+          <!-- <img
+            class="remove"
+            src="images/black.png"
+            alt="black"
+            style="margin: 1rem"
+          /> -->
         </div>
       </section>
       <section class="new">
@@ -124,6 +140,8 @@
               <h2 class="want">ХОЧЕШЬ IPHONE 14 PRO?</h2>
               <div class="contact-list">
                 <input type="text" placeholder="Ваше имя" />
+                <!-- show entered data  -->
+                <!-- <div class="text">...</div> -->
                 <input type="tel" placeholder="Номер телефона" />
                 <p>В ближайшее время наш менеджер свяжется с Вами</p>
                 <button class="form-button" type="submit">ЗАКАЗАТЬ</button>
@@ -147,6 +165,7 @@
         <a class="footer-phone" href="tel.+375292731414">+375 29 273-14-14</a>
       </div>
     </footer>
+
     <script src="scripts/script.js"></script>
   </body>
 </html>
